--- a/style.css
+++ b/style.css
@@ -8,93 +8,71 @@
     background-color: rgb(39,50,56);
 }
 
-#titulo {
+h1 {
     background-color: white;
     font-family: Impact, Charcoal, sans-serif;
     color: rgb(105,133,147);
     text-align: center;
+    font-size: 55px;
 }
 
-.parrafo {
+p {
     color: rgb(192, 184, 163);
     font-family: Arial, Gadget, sans-serif;
     text-align: justify;
 }
 
-.subtitulo {
-    font-family: 'Lucida Grande', sans-serif;
-    font-weight: bolder;
+h2 {
+    font-family: Impact, Charcoal, sans-serif;
     font-style: italic;
-    font-size: xx-large;
-    /* color: rgb(203, 194, 181); */
+    font-size: 40px;
+    font-variant: small-caps;
+    font-weight: normal;
+    margin-bottom: 15px;
+    margin-top: 15px;
 }
 
-#subtitulo-aspiradora {
-    font-family: 'Lucida Grande', sans-serif;
-    font-weight: bolder;
-    font-style: italic;
-    font-size: xx-large;
-    color: rgb(203, 194, 181);
+img {
+    margin-left: 35px;
+    border: 4px solid;
+}
+
+#color-aspiradora {
+    color: rgb(230, 203, 191);
 }
 
 #img-aspiradora {
-    margin-left: 35px;
-    border: 4px solid;
-    border-color: rgb(203, 194, 181);
+    border-color: rgb(230, 203, 191);
 }
 
-#subtitulo-celular {
-    font-family: 'Lucida Grande', sans-serif;
-    font-weight: bolder;
-    font-style: italic;
-    font-size: xx-large;
+#color-celular {
     color: rgb(161, 193, 203);
 }
 
 #img-celular {
-    margin-left: 35px;
-    border: 4px solid;
     border-color: rgb(161, 193, 203);
 }
 
-#subtitulo-consola {
-    font-family: 'Lucida Grande', sans-serif;
-    font-weight: bolder;
-    font-style: italic;
-    font-size: xx-large;
+#color-consola { 
     color: rgb(188, 189, 191);
 }
 
 #img-consola {
-    margin-left: 35px;
-    border: 4px solid;
     border-color: rgb(188, 189, 191);
 }
 
-#subtitulo-home {
-    font-family: 'Lucida Grande', sans-serif;
-    font-weight: bolder;
-    font-style: italic;
-    font-size: xx-large;
+#color-home {
     color: rgb(141, 148, 161);
 }
 
 #img-home {
-    margin-left: 35px;
-    border: 4px solid;
     border-color: rgb(141, 148, 161);
 }
 
-#subtitulo-tele {
-    font-family: 'Lucida Grande', sans-serif;
-    font-weight: bolder;
-    font-style: italic;
-    font-size: xx-large;
+#color-tele {
     color: rgb(177, 175, 162);
 }
 
 #img-tele {
-    margin-left: 35px;
-    border: 4px solid;
     border-color: rgb(177, 175, 162);
 }
