--- a/style.css
+++ b/style.css
@@ -9,17 +9,11 @@
 }
 
 h1 {
-    background-color: white;
     font-family: Impact, Charcoal, sans-serif;
-    color: rgb(105,133,147);
     text-align: center;
     font-size: 55px;
-}
-
-p {
-    color: rgb(192, 184, 163);
-    font-family: Arial, Gadget, sans-serif;
-    text-align: justify;
+    color: rgb(105,133,147);
+    background-color: white;
 }
 
 h2 {
@@ -32,47 +26,39 @@ h2 {
     margin-top: 15px;
 }
 
+p {
+    /* color: rgb(192, 184, 163); */
+    color: rgb(255, 244, 228);
+    font-family: 'Lucida Sans Unicode', 'Lucida Grande', sans-serif;
+    text-align: justify;
+}
+
 img {
     margin-left: 35px;
     border: 4px solid;
 }
 
-#color-aspiradora {
+#aspiradora {
     color: rgb(230, 203, 191);
-}
-
-#img-aspiradora {
     border-color: rgb(230, 203, 191);
 }
 
-#color-celular {
+#celular {
     color: rgb(161, 193, 203);
-}
-
-#img-celular {
     border-color: rgb(161, 193, 203);
 }
 
-#color-consola { 
+#consola { 
     color: rgb(188, 189, 191);
-}
-
-#img-consola {
     border-color: rgb(188, 189, 191);
 }
 
-#color-home {
+#hometheaters {
     color: rgb(141, 148, 161);
-}
-
-#img-home {
     border-color: rgb(141, 148, 161);
 }
 
-#color-tele {
+#tele {
     color: rgb(177, 175, 162);
-}
-
-#img-tele {
     border-color: rgb(177, 175, 162);
 }
